<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.uoc.TDDM.practica2.ShippingPointActivity" >

    <item android:id="@+id/action_save" android:title="@string/save" app:showAsAction="always" android:visible="true" android:icon="@drawable/save" android:orderInCategory="1"/>
    <item android:id="@+id/action_estat" android:icon="@drawable/box" app:showAsAction="always" android:title="@string/estat" android:visible="true" android:orderInCategory="3"/><item android:id="@+id/action_settings" android:orderInCategory="100" app:showAsAction="always" android:visible="true" android:menuCategory="system" android:icon="@drawable/settings" android:title="@string/config">
        <menu>
            <item android:id="@+id/action_logout" android:title="@string/logout" android:visible="true" />
        </menu>
    </item>
    
</menu>
