<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.uoc.TDDM.practica2.StateActivity" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="always" 
        android:visible="true" android:menuCategory="system" android:icon="@drawable/settings" android:title="@string/config">
        <menu>
            <item android:id="@+id/action_logout" android:title="@string/logout" android:visible="true"/>
        </menu>
    </item>
    
    <item android:id="@+id/action_nouEnviament" android:icon="@drawable/descarga" app:showAsAction="always" android:title="@string/nouEnviament" android:visible="true" android:orderInCategory="1"/>

</menu>
