<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uoc.TDDM.practica2.LoginActivity" >
    
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearlayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
     <ImageView 
         android:src="@drawable/logo"
         android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <TextView
	     android:id="@+id/textView1"
	     android:layout_width="wrap_content"
	     android:layout_height="wrap_content"
	     android:layout_gravity="center"
	     android:layout_marginTop="46dp"
	     android:text="@string/titol"
	     android:textAppearance="?android:attr/textAppearanceLarge" />
	</LinearLayout>

	 <LinearLayout 
     	android:layout_marginTop="40dp"
     	android:orientation="vertical"
     	android:layout_below="@+id/linearlayout1"
     	android:layout_height="wrap_content"
        android:layout_width="fill_parent">   
    <LinearLayout 
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
	   <TextView
	      android:id="@+id/textView2"
	      android:layout_width="fill_parent"
	      android:layout_height="wrap_content"
	      android:text="@string/username"
	      android:textSize="14sp"/>
	   <EditText
	       android:id="@+id/usertxt"
	       android:layout_width="fill_parent"
	       android:layout_height="wrap_content"
		   android:layout_marginLeft="5sp"
		   android:background="@color/EditTextBG"
	       android:inputType="text"
	       android:layout_gravity="center" >
       		<requestFocus />
   		</EditText>
       </LinearLayout>
       <LinearLayout
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
		   <TextView
		      android:id="@+id/textView3"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/password"
		      android:ems="5"
		      android:textSize="14sp"/>
		   <EditText
		       android:id="@+id/passwordtxt"
		       android:layout_width="fill_parent"
		       android:layout_height="wrap_content"
		       android:layout_marginLeft="5sp"
		       android:ems="10"
		       android:background="@color/EditTextBG"
		       android:inputType="textPassword" 
		       android:layout_gravity="center"/>
  	</LinearLayout>
   <Button
      android:id="@+id/loginbtn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="60dp"
      android:layout_gravity="center"
      android:text="@string/Login"/>

</LinearLayout>



</RelativeLayout>
