<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uoc.TDDM.practica2.ShippingPointActivity" >

<LinearLayout 
      android:orientation="vertical"
      android:layout_width="fill_parent"  
  	  android:layout_height="fill_parent">
    <LinearLayout 
      android:orientation="horizontal"
      android:layout_width="wrap_content"  
  	  android:layout_height="wrap_content">
	    <TextView
	        android:textSize="16sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems = "5"
	        android:text="@string/name" />
	    <EditText
	        android:id="@+id/nametxt"
	        android:textSize="16sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="8"
	        android:inputType="text"/>
	</LinearLayout>
	<LinearLayout 
      android:orientation="horizontal"
      android:layout_width="wrap_content"  
  	  android:layout_height="wrap_content"
  	  android:layout_marginTop="30sp">
	    <TextView
	        android:textSize="16sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems = "5"
	        android:text="@string/sendTime" />
	    <TextView
	        android:id="@+id/deliveryDateTxt"
	        android:textSize="16sp"
	        android:layout_width="wrap_content"
	        android:layout_height="fill_parent"
	        android:gravity="center"
	        android:ems="8"/>
	   	<ImageButton 
	   	    android:layout_height="20sp"
			android:layout_width="20sp" 
			android:id="@+id/getDateBtn"
			android:background="@drawable/calendar"
			android:contentDescription="@string/calendar" 
			android:textSize="15sp"
			android:layout_marginTop="10dip"
			android:layout_marginLeft="10dip" />
	</LinearLayout>
	<LinearLayout 
      android:orientation="horizontal"
      android:layout_width="wrap_content"  
  	  android:layout_height="wrap_content"
  	  android:layout_marginTop="30sp">

	    <TextView
	        android:layout_width="107dp"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:text="@string/setOrigin"
	        android:textSize="16sp" />

	    <ImageView 
	        android:src="@drawable/reddot"
	        android:contentDescription="@string/setOrigin"
	     	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"/>

	    <TextView
	        android:layout_width="60dp"
	        android:layout_height="wrap_content"
	        android:ems="8"
	        android:layout_marginLeft="10dp"
	        android:text="@string/setDestination"
	        android:textSize="16sp" />

		<ImageView 
		    android:src="@drawable/greendot"
	        android:contentDescription="@string/setDestination"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"/>
	</LinearLayout>
	<fragment 
	  android:id="@+id/map"
	  android:layout_width="match_parent"
	  android:layout_height="match_parent"
	  android:layout_marginTop="5dp"
	  class="com.google.android.gms.maps.SupportMapFragment"/>
</LinearLayout>
    

</RelativeLayout>
