<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.uoc.TDDM.practica2.StateActivity"
    android:theme="@style/Theme.AppCompat" >
	
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"  
  	  android:layout_height="fill_parent">
		<LinearLayout
		  android:id="@+id/listViewLayout"
	      android:orientation="vertical"
	      android:layout_width="fill_parent"
	      android:background="@color/listColor"  
	  	  android:layout_height="100sp">
		    <ListView
		        android:id="@+id/enviamentListView"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"
		        android:divider="#b5b5b5"
		        android:dividerHeight="1dp" 
		        android:layout_margin="5dp" />
 		</LinearLayout>
 		<LinearLayout
	      android:orientation="vertical"
	      android:layout_width="fill_parent"  
	  	  android:layout_height="fill_parent"
	  	  android:layout_margin="5dp">
		    <TextView 		       
		       android:id="@+id/shippingNametxt"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:textSize="20sp"
		       android:ems="10"
		       android:layout_marginTop="5dp"
		       android:layout_marginBottom="10dp"
		       android:textStyle="bold"/>
			<LinearLayout
			   android:orientation="horizontal" 
			   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="10dp">
			   <TextView 
	 		   android:text="@string/location"
   		       android:textSize="16sp"
	 		   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"/>
			   <TextView
		       android:id="@+id/locationtxt"
   		       android:textSize="16sp"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:ems="10"
		       android:textStyle="bold"
		       android:layout_marginLeft="30dp"/>
    		</LinearLayout>
			<LinearLayout 
			   android:orientation="vertical"
			   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="10dp">
			   <TextView 
	 		   android:text="@string/sendTime"
	 		   android:textSize="16sp"
	 		   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"/>
			   <TextView
		       android:id="@+id/estimatedTimetxt"
		       android:textSize="16sp"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:ems="10"
		       android:textStyle="bold"/>
    		</LinearLayout>
			<LinearLayout 
			   android:orientation="vertical"
			   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="10dp">
			   <TextView 
	 		   android:text="@string/deliveryAddress"
	 		   android:textSize="16sp"
	 		   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"/>
			   <TextView
		       android:id="@+id/deliveryAddresstxt"
		       android:textSize="16sp"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:ems="10"
		       android:textStyle="bold"/>
    		</LinearLayout>
    		<LinearLayout 
			   android:orientation="vertical"
			   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"
	           android:layout_marginTop="10dp">
			   <TextView 
	 		   android:text="@string/sendingAddress"
	 		   android:textSize="16sp"
	 		   android:layout_width="wrap_content"
	           android:layout_height="wrap_content"/>
			   <TextView
		       android:id="@+id/sendingAddresstxt"
		       android:textSize="16sp"
		       android:layout_width="wrap_content"
		       android:layout_height="wrap_content"
		       android:ems="10"
		       android:textStyle="bold"/>
    		</LinearLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
